test: 정산 적재 테스트코드 수정